--- a/SDSS Presentation/index.Rmd
+++ b/SDSS Presentation/index.Rmd
@@ -119,7 +119,7 @@ class:primary
 .large.emph[
 + Introduction to Rural Shrink Smart Project with Iowa State University and Open-Source Data Challenges
 
-+ Motivation - Why Dashboards?
++ Motivation - Why Use Dashboards?
 
 + Guiding Design Principles & Dashboard Design Workflow 
 
@@ -127,7 +127,7 @@ class:primary
   + Using Guided Discovery Learning (GDL)
 
 + Dashboard Design Workflow 
-  + Feedback Loop (Active and Passive Methodologies)
+  + Feedback Loop (Active and Passive Data Collections)
 
 + Future Work
 ]
@@ -184,14 +184,14 @@ This material is based upon work supported by the National Science Foundation un
   + Survey response rates keep decreasing over time
 
 + There are objective measures of things that contribute to QOL available in public datasets
-.medium.emph[
+
   + School ratings
   + Town budgets for services
   + Access to medical care, shopping, etc.
   + Transportation trends
   + Demographic shifts
   + City level cooperative agreements with other government entities and NGOs
-]
+
 
 ---
 # Challenges
@@ -316,12 +316,12 @@ Our initial set of dashboard design principles are:
 --
 
 <br>
--  During the process, we found that schools, fire departments, post offices and hospitals were missing
+-  During the process, we found that schools, fire departments, post offices and hospitals were missing from our open-source data
 
 --
 
 <br>
--  Resulted in finding other open source datasets that were used for sanity checks along with adding information of missing data
+-  Resulted in finding other open-source data that were used for sanity checks along with adding information of missing data
     
 ???
 
@@ -463,6 +463,9 @@ class:primary
       + Frame (frame of content and frame of visual encoding)
 
 **Why?** Advantages of using NOVIS model includes a reproducible framework of understanding graphics.
+
+**Findings** The PCP in this study were found to be promising for novice users, when comparing to the Treemap and Chord Diagram. 
+
 <br><br>
 [Reference Journal](https://ieeexplore.ieee.org/document/7192668)`r Citep(bib[[c("lee et al")]])`
 
@@ -527,9 +530,28 @@ class:inverse
 <br>
 <br>
 .center[
-# Dashboard Design Workflow - Feedback Loop 
-## Active & Passive Data Collection
+# Dashboard Design Workflow - Feedback Loop (Actively & Passively) 
 ]
+---
+# Dashboard Design WorkFlow (Feedback)
+
+## Background of User Feedback Questionnaire
+
+**Who?** [Young & Kitchin](https://doi.org/10.1016/j.ijhcs.2020.102429) wrote "Creating design guidelines for building city dashboards from a user's perspectives"
+  
+**What?** To help summarize a users concerns,Young & Kitchin utilize six main critiques, which are framed into questions.
+
+**How is this useful?** We will adapt these questions to better help the town leaders communicate clear feedback for our team to use. 
+
+**Experimentation** We will collect how the users are experiencing the app with these set questions:
++ Is the information the dashboard presents clear? <i>(Scope)</i>
++ Is the dashboard easy to navigate? <i>(Usability)</i>
++ Is the dashboard used in a socially responsible manner? <i>(Ethics)</i>
++ Do you believe that you can trust the Rural Shrink Smart dashboard? <i>(Validity)</i>
++ Do you find value in the Rural Shrink Smart dashboard? <i>(Utility)</i>
+
+
+???
 
 ---
 # Dashboard Design WorkFlow (Feedback)
@@ -563,6 +585,9 @@ class:primary
 
 # Future Work
 
++ Comparatively look at the cities town leaders used to compare to other towns to the USDA rurality index classifications. [Rural-Urban Continuum Codes](https://www.ers.usda.gov/topics/rural-economy-population/rural-classifications/)
+  + If results are correlated, making an argument for a proxy
+  
 + Continue to incorporate feedback from town leaders. 
 <br>
 .center[
@@ -570,8 +595,7 @@ class:primary
 ]
 
 ???
-With six rural town leaders, we will have enough information needed to understand the usefulness of the dashboard from 
-
+With six rural town leaders, we will have enough information needed to understand the usefulness of the dashboard from town leaders that are working with us directly. The Rural-Urban Continuum Codes are released every 10 years. The most recent release was in 2013, the next release will be in 2023.
 ---
 class:inverse
 <br>
