--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,9 @@
+---
+title: "Denise Bradford's Website"
+---
 
-Welcome, My name is Denise Bradford! I am currently a Ph.D. syiudent in Statistics at University of Nebraska - Lincoln. My research interests involve data science related to data collection and perception and decision making using graphics.
+Welcome, My name is Denise Bradford! I am currently a Ph.D. student in Statistics at the University of Nebraska - Lincoln. My research interests involve data science related to data collection, perception, and decision-making using graphics.
 
 Presentation Reference List:
 [SDSS 2022 Presentation](https://drbradford12.github.io/Presentations/SDSS Presentation) 
+[Dissertation Presentation](https://drbradford12.github.io/Presentations/Dissertation Presentation)
