--- a/index.Rmd
+++ b/index.Rmd
@@ -5,5 +5,5 @@ title: "Denise Bradford's Website"
 Welcome, My name is Denise Bradford! I am currently a Ph.D. student in Statistics at the University of Nebraska - Lincoln. My research interests involve data science related to data collection, perception, and decision-making using graphics.
 
 Presentation Reference List:
-[SDSS 2022 Presentation](https://drbradford12.github.io/Presentations/SDSS Presentation) 
+[SDSS 2022 Presentation](https://drbradford12.github.io/SDSS Presentation) 
 <!-- [Dissertation Presentation](https://drbradford12.github.io/Presentations/Dissertation Presentation) -->
