Updates for STAT 585

--- a/index.Rmd
+++ b/index.Rmd
@@ -5,5 +5,13 @@ title: "Denise Bradford's Website"
 Welcome, My name is Denise Bradford! I am currently a Ph.D. student in Statistics at the University of Nebraska - Lincoln. My research interests involve data science related to data collection, perception, and decision-making using graphics.
 
 Presentation Reference List:
-[SDSS 2022 Presentation](https://drbradford12.github.io/SDSS Presentation) 
-<!-- [Dissertation Presentation](https://drbradford12.github.io/Presentations/Dissertation Presentation) -->
+
+[SDSS 2022 Presentation](https://drbradford12.github.io/SDSS Presentation)
+
+[Dissertation Presentation](https://drbradford12.github.io/Dissertation Presentation) 
+
+STAT 585 Assignment List:
+
+[Quarto Blog](https://drbradford12.github.io/Quarto Blog)
+
+[Github Resume](http://resume.github.io/?drbradford12) 
